# dartomato

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Dartomat.pro  Dartomat.pro.bak  Dartomat.pro.user.25477d2  README.md  build.bat  cdartboard_base.cpp  cdartboard_base.h  chart.cpp  chart.h  chartview.cpp  chartview.h  checkoutlists.h  cricketclass.cpp  cricketclass.h  cricketinput.cpp  cricketinput.h  cricketinput.ui  cricketmainwindow.cpp  cricketmainwindow.h  cricketmainwindow.ui  dartboard.cpp  dartboard.h  dartboard_cricket.cpp  dartboard_cricket.h  dartboardsegment.cpp  dartboardsegment.h  dartboardview.cpp  dartboardview.h  dartomatmain.cpp  dartomatmain.h  dartomatmain.ui  deployWin.bat  dialognameinput.cpp  dialognameinput.h  dialognameinput.ui  gamewindow.cpp  gamewindow.h  (+30 more)
.github/workflows/: cmake-multi-platform.yml
inc/: add_players_dialog.h  alltime_player_stats_model.h  alltime_stats_dialog.h  checkout_lists.h  cricket_class.h  cricket_input.h  cricket_mainwindow.h  cricket_mainwindow_if.h  dartboard_base.h  dartboard_cricket.h  dartboard_segment.h  dartboard_view.h  dartboard_x01.h  dartomat_mainwindow.h  dialog_name_input.h  game_data_handler.h  game_data_model.h  game_history_dialog.h  game_history_model.h  game_history_table_view.h  game_results_model.h  global_game_stats_cricket_model.h  global_game_stats_model.h  global_game_stats_x01_model.h  global_score_stats_model.h  global_score_stats_x01_model.h  global_segment_stats_cricket_model.h  global_segment_stats_model.h  global_segment_stats_x01_model.h  groupbox_cricket.h  groupbox_x01.h  leg_scores_cricket_model.h  leg_scores_model.h  leg_scores_x01_model.h  leg_stats_cricket_model.h  leg_stats_model.h  leg_stats_x01_model.h  mainwindow_if.h  player_active_button.h  player_list_model.h  (+12 more)
resources/: .desktop  Dartomato.desktop  resources.qrc  version.h.in  version.rc.in
src/: add_players_dialog.cpp  add_players_dialog.ui  alltime_player_stats_model.cpp  alltime_stats_dialog.cpp  alltime_stats_dialog.ui  cricket_class.cpp  cricket_input.cpp  cricket_input.ui  cricket_mainwindow.cpp  dartboard_base.cpp  dartboard_cricket.cpp  dartboard_segment.cpp  dartboard_view.cpp  dartboard_x01.cpp  dartomat_mainwindow.cpp  dartomat_mainwindow.ui  dialog_name_input.cpp  game_data_handler.cpp  game_data_model.cpp  game_history_dialog.cpp  game_history_dialog.ui  game_history_model.cpp  game_results_model.cpp  global_game_stats_cricket_model.cpp  global_game_stats_model.cpp  global_game_stats_x01_model.cpp  global_score_stats_model.cpp  global_score_stats_x01_model.cpp  global_segment_stats_cricket_model.cpp  global_segment_stats_model.cpp  global_segment_stats_x01_model.cpp  groupbox_cricket.cpp  groupbox_cricket.ui  groupbox_x01.cpp  groupbox_x01.ui  leg_scores_cricket_model.cpp  leg_scores_model.cpp  leg_scores_x01_model.cpp  leg_stats_cricket_model.cpp  leg_stats_model.cpp  (+18 more)
tests/: CMakeLists.txt  fakes.h  fixtures.h  main.cpp  mocks.h  version.h
ui/: add_players_dialog.ui  cricket_input.ui  dartomat_mainwindow.ui  dialog_name_input.ui  groupbox_cricket.ui  groupbox_x01.ui  select_players_dialog.ui  stats_window.ui  x01_mainwindow.ui
